# CIGAR

./: .gitignore  CMakeLists.txt  LICENSE  OneDIntegralSimple.cpp  README.md  RandomGeneratorTest.cpp
include/: VEGAS_Integrator.h  VEGAS_Stratify.h  VEGAS_map.h
src/: OneDIntegralSimple.cpp  VEGAS_Integrator.cpp  VEGAS_Stratify.cpp  VEGAS_map.cpp
test/: CMakeLists.txt  ImproveGridTest.cpp  OneDTest.cpp  RandomGeneratorTest.cpp  VEGAS_Inter_test.cpp  VEGAS_Inter_zero_test.cpp  VEGAS_map_test.cpp
