CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
if (POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif ()
PROJECT(VEGAS1D CXX)

SET(VEGAS1D_VERSION "0.1")

LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
FIND_PACKAGE(ROOT REQUIRED)
INCLUDE_DIRECTORIES(${ROOT_INCLUDE_DIRS} include)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -m64")

ADD_EXECUTABLE(RandomTest test/RandomGeneratorTest.cpp)
ADD_EXECUTABLE(ImproveGridTest test/ImproveGridTest.cpp src/OneDIntegralSimple.cpp)
ADD_EXECUTABLE(OneDTest test/OneDTest.cpp src/OneDIntegralSimple.cpp)
ADD_EXECUTABLE(VEGASMAPTEST test/VEGAS_map_test.cpp src/VEGAS_map.cpp)
TARGET_LINK_LIBRARIES(RandomTest ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(ImproveGridTest ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(OneDTest ${ROOT_LIBRARIES})