CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
if (POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif ()
PROJECT(CIGAR CXX)

SET(CIGAR_VERSION "0.3")

LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
FIND_PACKAGE(ROOT REQUIRED)
INCLUDE_DIRECTORIES(${ROOT_INCLUDE_DIRS} include)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -m64")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

FILE(GLOB CIGAR_SOURCE src/*.cpp)

# ====================================
# Build the libraries
# ====================================
# libcigar.a
ADD_LIBRARY(CIGAR_static STATIC ${CIGAR_SOURCE})
SET_TARGET_PROPERTIES(CIGAR_static PROPERTIES LINKER_LANGUAGE CXX
    VERSION ${CIGAR_VERSION} OUTPUT_NAME cigar
)
# TARGET_LINK_LIBRARIES(CIGAR_static ${GSL_LIBRARIES} ${Boost_LIBRARIES})

# libcigar.so
ADD_LIBRARY(CIGAR_shared SHARED ${CIGAR_SOURCE})
SET_TARGET_PROPERTIES(CIGAR_shared PROPERTIES LINKER_LANGUAGE CXX
    VERSION ${CIGAR_VERSION} OUTPUT_NAME cigar
)
# TARGET_LINK_LIBRARIES(CIGAR_shared ${GSL_LIBRARIES} ${Boost_LIBRARIES})

SET(CIGAR_LIBRARIES CIGAR_shared)

ADD_SUBDIRECTORY(test)
