CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)

ADD_EXECUTABLE(RandomTest RandomGeneratorTest.cpp)
ADD_EXECUTABLE(VEGASMAPTEST VEGAS_map_test.cpp)
ADD_EXECUTABLE(VEGASINTERTEST VEGAS_Inter_test.cpp)
ADD_EXECUTABLE(VEGASZEROTEST VEGAS_Inter_zero_test.cpp)
TARGET_LINK_LIBRARIES(RandomTest ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(VEGASMAPTEST ${CIGAR_LIBRARIES})
TARGET_LINK_LIBRARIES(VEGASINTERTEST ${CIGAR_LIBRARIES})
TARGET_LINK_LIBRARIES(VEGASZEROTEST ${CIGAR_LIBRARIES})